# cohortlint

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  PILOT.md  PILOT_RESULTS.md  README.md  SECURITY.md  cohortlint  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
scripts/: run_local_pilot.py
src/cohortlint/: __init__.py  cli.py  demo.py  engine.py  external.py  fastq.py  hts.py  manifest.py  model.py  output.py  reference.py
tests/: test_engine_cli.py  test_external.py  test_fastq.py  test_hts.py  test_manifest.py
