[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cohortlint"
version = "0.1.0"
description = "Preflight interoperability checks for multi-site genomic cohorts"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "CohortLint contributors" }]
keywords = ["bioinformatics", "genomics", "quality-control", "FASTQ", "BAM", "VCF"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.scripts]
cohortlint = "cohortlint.cli:main"

[project.optional-dependencies]
dev = ["mypy>=1.10", "ruff>=0.5"]

[project.urls]
Homepage = "https://github.com/RonitBStudent/cohortlint"
Repository = "https://github.com/RonitBStudent/cohortlint"
Issues = "https://github.com/RonitBStudent/cohortlint/issues"

[tool.setuptools.packages.find]
where = ["src"]
